--- a/dsmoviehtml/css/styles.css
+++ b/dsmoviehtml/css/styles.css
@@ -2,6 +2,7 @@
 
 :root {
     --bg-gray: #ddd;
+    --text-gray: #4a4a;
     --color-primary: #4d41c0;
     --white: #fff;
 }
@@ -54,4 +55,44 @@ a, a:hover {
 
  .dsmovie-contact-container img{
     margin-right: 10px;
+}
+#dsmvoie-card-list{
+
+    padding: 40px 0;
+
+}
+.dsmovie-card{
+    width: 360px;
+    height: 400px;
+}
+
+.dsmovie-card img{
+    width: 100%;
+    border-radius: 8px 8px 0 0 ;
+}
+
+.dsmove-card-description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0 20px 0;
+    background-color: var(--white);
+    border-radius: 0 0 8px 8px;
+}
+.dsmove-card-description h3{
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.dsmovie-btn, .dsmovie-btn:hover{
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: var(--white);
+    font: 14px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
 }
