--- a/dsmoviehtml/css/styles.css
+++ b/dsmoviehtml/css/styles.css
@@ -5,6 +5,7 @@
     --text-gray: #4a4a;
     --color-primary: #4d41c0;
     --white: #fff;
+    --dark: rgba(53, 53, 53, 0.966);
 }
 
 *{
@@ -17,7 +18,7 @@ h1,h2,h3{
 }
 
 html,body{
-    background-color: var(--bg-gray);
+    background-color:var(--dark);
 }
 
 header{
@@ -77,13 +78,16 @@ a, a:hover {
     padding: 10px 0 20px 0;
     background-color: var(--white);
     border-radius: 0 0 8px 8px;
+    min-height: 150px;
 }
 .dsmove-card-description h3{
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 20px;
+    text-align: center;
+    padding: 20px;
 }
-.dsmovie-btn, .dsmovie-btn:hover{
+.dsmovie-btn2, .dsmovie-btn, .dsmovie-btn:hover, .dsmovie-btn2:hover{
     width: 100px;
     height: 40px;
     background-color: var(--color-primary);
@@ -94,4 +98,6 @@ a, a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+    margin: 5px;
 }
+
