--- a/dsmoviehtml/css/styles.css
+++ b/dsmoviehtml/css/styles.css
@@ -101,3 +101,36 @@ a, a:hover {
     margin: 5px;
 }
 
+.dsmovie-form-container{
+    padding: 40px 0;
+    max-width: 480px;;
+}
+
+.dsmovie-card-section{
+    width: 50%;
+    border-radius: 8px 8px 0 0 ;
+}
+
+.dsmove-card-description-section{
+    width: 533px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0 20px 0;
+    background-color: var(--white);
+    border-radius: 0 0 8px 8px;
+    min-height: 150px;
+}
+.dsmovie-btn-section , .dsmovie-btn-section:hover, .dsmovie-btn2-section , .dsmovie-btn2-section:hover{
+    width: 400px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: var(--white);
+    font: 14px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    margin: 5px;
+}
